--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@types/node-fetch": "^2.6.1",
+    "express": "^4.18.1",
     "node-fetch": "^2.6.7",
+    "request": "^2.88.2",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-http": "^4.2.0",
+    "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/sinon": "^10.0.11",
     "chai": "^4.3.6",
