--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
-module.exports = {
+{
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -27,7 +27,7 @@ module.exports = {
       "error",
       "always"
     ],
-    "no-console": "error",
+    "no-console": "off",
     "quotes": [
       "error",
       "single",
