--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "build": "npm test && tsc",
-    "lint": "eslint --ignore-path .gitignore . --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint . --ext .ts --max-warnings=0",
+    "lint-fix": "npm run lint -- --fix",
     "test": "mocha ${MOCHA_ARGS}"
   },
   "dependencies": {
@@ -15,26 +15,36 @@
     "express": "^4.18.1",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2",
+    "rxjs": "^7.5.5",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-http": "^4.2.0",
+    "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/sinon": "^10.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^10.0.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "esm": "^3.2.25",
     "mocha": "^8.4.0",
     "prettier": "^2.6.2",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "tslint": "^6.1.3",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript-tslint-plugin": "^1.0.2"
   },
   "keywords": [],
   "author": "",
