--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@types/node-fetch": "^2.6.1",
+    "@types/uuid-validate": "0.0.1",
     "express": "^4.18.1",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2",
     "rxjs": "^7.5.5",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
@@ -26,6 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/sinon": "^10.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "chai": "^4.3.6",
