--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "mocha ${MOCHA_ARGS}"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node-fetch": "^2.6.1",
     "@types/uuid-validate": "0.0.1",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2",
     "rxjs": "^7.5.5",
