--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "mocha ${MOCHA_ARGS}"
   },
   "dependencies": {
+    "@type-challenges/utils": "^0.1.1",
     "@types/lodash": "^4.14.182",
     "@types/node-fetch": "^2.6.1",
     "@types/uuid-validate": "0.0.1",
