--- a/package.json
+++ b/package.json
@@ -34,23 +34,22 @@
     "@types/sinon": "^10.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
-    "eslint": "^8.16.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-mocha": "^10.0.4",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.7",
     "esm": "^3.2.25",
     "mocha": "^8.4.0",
-    "prettier": "^2.6.2",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
-    "tslint": "^6.1.3",
-    "tslint-eslint-rules": "^5.4.0",
     "typescript-tslint-plugin": "^1.0.2"
   },
   "keywords": [],
