--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^2.6.7",
     "request": "^2.88.2",
     "rxjs": "^7.5.5",
+    "type-testing": "^0.2.0",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2",
     "uuid-validate": "0.0.3"
@@ -43,9 +44,9 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7",
     "esm": "^3.2.25",
     "mocha": "^8.4.0",
+    "prettier": "^2.8.7",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.7.0",
