--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "type-testing": "^0.2.0",
     "typescript": "^5.3.3",
     "uuid": "^8.3.2",
-    "uuid-validate": "0.0.3"
+    "uuid-validate": "0.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
