--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "dist",
     "resolveJsonModule": true,
     "noErrorTruncation": true, 
+    "strictPropertyInitialization": false,
   },
   "include": [
     "src/**/*",
