--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,7 @@ settings:
 parserOptions:
   ecmaVersion: 11
   sourceType: module
+  project: ['./tsconfig.json']
 plugins:
   - '@typescript-eslint'
 rules:
@@ -42,6 +43,7 @@ rules:
       alphabetize:
         order: asc
         caseInsensitive: true
+  '@typescript-eslint/no-floating-promises': 1
   '@typescript-eslint/no-explicit-any':
     - off
   '@typescript-eslint/explicit-module-boundary-types':
