--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es2021",
     "strict": true,
     "moduleResolution": "node",
     "sourceMap": true,
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "noErrorTruncation": true, 
     "strictPropertyInitialization": false,
+    "useUnknownInCatchVariables": true
   },
   "include": [
     "src/**/*",
